<resources>
    <string name="app_name">PM-L8</string>
    <string name="ordenar_a_z">Ordenar A-Z</string>
    <string name="ordenar_z_a">Ordenar Z-A</string>
    <string name="characters_mainA">Characters</string>
    <string name="ingreso_correo">Ingresa tu correo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_character_adapter">CharacterAdapter</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="inicio_sesion">Iniciar sesión</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="img_type">imagen de tipo de personaje</string>
    <string name="species">Species</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="name">name</string>
    <string name="origin">Origin</string>
    <string name="episode_appearances">Episodes</string>
    <string name="Cerrarsesion">Log out</string>
    <string name="keyIniciosession">Her21199@uvg.edu.gt</string>
    <string name="password">Contraseña</string>
    <string name="correoingreso">Her21199@uvg.edu.gt</string>
    <string name="logo_fragment_login">logo_fragment_login</string>
    <string name="sincronizar">sincronizar</string>
    <string name="delete">delete</string>
    <string name="guardar_fragmentcharacters">Guardar</string>
</resources>